--- a/exercises/test/index.html
+++ b/exercises/test/index.html
@@ -11,13 +11,14 @@
       * { box-sizing: border-box; }
       html, body { font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.5; margin: 0; }
       p { margin: 0 0 1em; }
-      a { color: #0066CC; }
+      a { color: #0066CC; text-decoration: none; border-bottom: 1px solid; }
       .container { width: 90%; max-width: 50em; margin: 1.5em auto; }
       section { margin: 3em 0; }
-      .logo { max-width: 10em; margin-bottom: 1.5em; }
+      .logo { max-width: 10em; margin-bottom: 3em; }
+      h2 { margin: 0 0 0.5em; }
 
-      h4 { margin: 0; }
-      pre[class*=language-] { padding: 0 1em; }
+      h4 { margin: 0 0 .5em; }
+      pre[class*=language-] { padding: 0 1em; margin-bottom: 1.5em; }
       code { font-size: 85%; margin: 0; padding: .2em .4em; font-size: 85%; background: #eee; border-radius: 3px; font-family: monospace; }
 
       .run-btn { padding: 1em; border: 1px solid #ddd; cursor: pointer; border-radius: 5px; font-size: 1em; }
@@ -44,6 +45,7 @@
       <button class="run-btn" onClick="runTests()">Run tests</button>
 
       <div id="mocha"></div>
+
       <p class="refresh-notice">
         Refresh the page to run the tests again.
       </p>
@@ -59,9 +61,19 @@ app.get("/hello", (req, res) => {
 })
 
 console.log("[ex1] Starting server...")
-app.listen(7879)
-          </code>
+app.listen(7879)</code>
         </pre>
+
+        <h4>Where to get help</h4>
+        <p>
+          If you get stuck, join the discussion on Github (<a href="github.com">issue #12</a>). It might
+          be that the exercise could be clearer or there's something you really can't wrap your head around.
+          That's totally fine.
+        </p>
+        <p>
+          You can also have a look at <a href="github.com">my solution</a> although I strongly encourage you go through
+          the exercise by yourself. :)
+        </p>
       </section>
       
     </main>
