--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -79,12 +79,11 @@
         document.getElementsByTagName('html')[0].classList.add('test-running')
         mocha.run()
       }
+
+      window.EXERCISE = {{ .exercise }}
     </script>
     <script src="bundle.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-javascript.min.js"></script>
-<!--     <script class="mocha-exec">
-      mocha.run();
-    </script> -->
   </body>
 </html>
