Update page title.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zero Bullshit</title>
+    <title>Exercise #{{ .exercise }} - {{ .title }} | Zero Bullshit Haskell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
