--- a/exercises/test/index.html
+++ b/exercises/test/index.html
@@ -2,100 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zero Bullshit</title>
+    <title>Zero Bullshit Haskell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
-
-    <style>
-      * { box-sizing: border-box; }
-      html, body { font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.5; margin: 0; }
-      p { margin: 0 0 1em; }
-      a { color: #0066CC; text-decoration: none; border-bottom: 1px solid; }
-      .container { width: 90%; max-width: 50em; margin: 1.5em auto; }
-      section { margin: 3em 0; }
-      .logo { max-width: 10em; margin-bottom: 3em; }
-      h2 { margin: 0 0 0.5em; }
-
-      h4 { margin: 0 0 .5em; }
-      pre[class*=language-] { padding: 0 1em; margin-bottom: 1.5em; }
-      code { font-size: 85%; margin: 0; padding: .2em .4em; font-size: 85%; background: #eee; border-radius: 3px; font-family: monospace; }
-
-      .run-btn { padding: 1em; border: 1px solid #ddd; cursor: pointer; border-radius: 5px; font-size: 1em; }
-      .run-btn:hover { background: #0066CC; color: #fff; }
-      .refresh-notice { display: none; background: #eee; padding: 1em; font-style: italic; color: #666; }
-
-      .test-running .run-btn { display: none;}
-      .test-running .refresh-notice { display: block; }
-
-      #mocha { margin: 0 0 1.5em; }
-    </style>
+    <meta http-equiv="refresh" content="0; URL='https://github.com/alpacaaa/zero-bullshit-haskell#readme'" />
   </head>
-  <body>
-    <main class="container">
-      <section>
-        <img src="logo-wide.png" class="logo" />
-        <h2>Exercise #01 - Static string</h2>
-        <p>
-          Write a server that exposes a <code>/hello</code> route.<br>
-          <code>GET /hello</code> should return <code>hello</code>.
-        </p>
-      </section>
-
-      <button class="run-btn" onClick="runTests()">Run tests</button>
-
-      <div id="mocha"></div>
-
-      <p class="refresh-notice">
-        Refresh the page to run the tests again.
-      </p>
-
-      <section>
-        <h4>Reference node.js implementation</h4>
-        <pre>
-          <code class="language-javascript">
-const app = require("express")()
-
-app.get("/hello", (req, res) => {
-  res.send("hello")
-})
-
-console.log("[ex1] Starting server...")
-app.listen(7879)</code>
-        </pre>
-
-        <h4>Where to get help</h4>
-        <p>
-          If you get stuck, join the discussion on Github (<a href="github.com">issue #12</a>). It might
-          be that the exercise could be clearer or there's something you really can't wrap your head around.
-          That's totally fine.
-        </p>
-        <p>
-          You can also have a look at <a href="github.com">my solution</a> although I strongly encourage you go through
-          the exercise by yourself. :)
-        </p>
-      </section>
-      
-    </main>
-
-    <script src="https://unpkg.com/chai/chai.js"></script>
-    <script src="https://unpkg.com/mocha/mocha.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chai-http@4.2.1/dist/chai-http.js"></script>
-
-    <script class="mocha-init">
-      mocha.setup('bdd');
-      mocha.checkLeaks();
-
-      function runTests() {
-        document.getElementsByTagName('html')[0].classList.add('test-running')
-        mocha.run()
-      }
-    </script>
-    <script src="bundle.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-javascript.min.js"></script>
-<!--     <script class="mocha-exec">
-      mocha.run();
-    </script> -->
-  </body>
 </html>
