Upload exercises + docs.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -37,7 +37,7 @@
   <body>
     <main class="container">
       <section>
-        <img src="/logo-wide.png" class="logo" />
+        <img src="../logo-wide.png" class="logo" />
         <h2>Exercise #{{ .exercise }} - {{ .title }}</h2>
         {{ .intro }}
       </section>
