Link to actual issues.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -75,7 +75,7 @@
 
         <h4>Where to get help</h4>
         <p>
-          Got stuck? Don't worry! Join the discussion on Github (<a href="github.com">issue #12</a>). It might
+          Got stuck? Don't worry! Join the discussion on Github (<a href="https://github.com/alpacaaa/zero-bullshit-haskell/issues/{{ .issue }}">issue #{{ .issue }}</a>). It might
           be that the exercise could be clearer or there's something you really can't wrap your head around.
           That's totally fine! 🙂
         </p>
