Add Youtube link.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -91,6 +91,7 @@
           <li><a href="https://github.com/alpacaaa/zero-bullshit-haskell">Zero Bullshit Haskell</a></li>
           <li><a href="https://github.com/alpacaaa/zero-bullshit-haskell#exercises">Exercises</a></li>
           <li><a href="https://alpacaaa.net/zero-bullshit-haskell/docs">Docs</a></li>
+          <li><a href="https://www.youtube.com/channel/UCJiwOqQi88UZCe8w7lwV4gw">Youtube</a></li>
         </ul>
       </footer>
       
