More info on Exercise #08.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -31,6 +31,7 @@
       .test-running .run-btn { display: none;}
       .test-running .refresh-notice { display: block; }
       .server-unreachable .server-down-notice { display: block; }
+      .hint { display: block; font-style: italic; }
 
       #mocha { margin: 0 0 1.5em; }
 
