Link to README.

--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -45,7 +45,7 @@
   <body>
     <main class="container">
       <section>
-        <a href="https://github.com/alpacaaa/zero-bullshit-haskell#exercises" class="logo">
+        <a href="https://github.com/alpacaaa/zero-bullshit-haskell#readme" class="logo">
           <img src="../logo-wide.png" alt="Zero Bullshit Haskell logo" />
         </a>
         <h2>Exercise #{{ exercise }} - {{ title }}</h2>
