--- a/exercises/test/template.html
+++ b/exercises/test/template.html
@@ -19,7 +19,7 @@
       h2 { margin: 0 0 0.5em; }
 
       h4 { margin: 0 0 .5em; }
-      pre { margin: 0; overflow: auto; }
+      pre { margin: 0; overflow: auto; max-height: 400px; }
       pre[class*=language-] { padding: 0 1em; margin-bottom: 1.5em; }
       code { font-size: 85%; margin: 0; padding: .2em .4em; font-size: 85%; background: #eee; border-radius: 3px; font-family: monospace; }
 
